--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "koa"
     ],
     "dependencies": {
-        "koa": "^2.11.0"
+        "dotenv": "^8.2.0",
+        "koa": "^2.11.0",
+        "koa-bodyparser": "^4.3.0",
+        "koa-router": "^8.0.8",
+        "socks5-https-client": "^1.2.1",
+        "winston": "^3.2.1"
     }
 }
