add readme and env examples

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-SECRET_KEY=
-TELEGRAM_BOT_ID=
+SECRET_KEY=<some random string>
+TELEGRAM_BOT_ID=<Bot id from @BotFather>
 
+#proxy parameters
 SOCKS_HOST=
 SOCKS_PORT=
 SOCKS_USERNAME=
 SOCKS_PASSWORD=
 
-WHITE_LIST=
+# ip white list you should specify comma separated
+# eg 127.0.0.1,127.0.0,2
+IP_WHITE_LIST=
