--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ SOCKS_PORT=
 SOCKS_USERNAME=
 SOCKS_PASSWORD=
 
+LISTEN_PORT=
+
 # ip white list you should specify comma separated
 # eg 127.0.0.1,127.0.0,2
 IP_WHITE_LIST=
+
+#root path to resources
+PREFIX_PATH=
