--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
         "koa"
     ],
     "dependencies": {
+        "babel-core": "^6.26.3",
         "dotenv": "^8.2.0",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.3.0",
         "koa-router": "^8.0.8",
         "socks5-https-client": "^1.2.1",
-        "winston": "^3.2.1"
+        "winston": "^3.2.1",
+        "babel-plugin-syntax-async-functions": "^6.8.0",
+        "babel-plugin-transform-async-to-generator": "^6.8.0",
+        "babel-preset-es2015-node5": "^1.2.0",
+        "babel-preset-stage-0": "^6.5.0",
+        "babel-register": "^6.9.0",
+        "co": "^4.6.0",
+        "koa-convert": "*",
+        "config": "*"
     }
 }
